feat: setup for nodejs

--- a/deno.json
+++ b/deno.json
@@ -12,6 +12,7 @@
     "main.js"
   ],
   "tasks": {
+    "build": "deno run --allow-read --allow-write --allow-run --allow-env build.ts",
     "test": "deno test ."
   }
 }
