--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-html-element",
-  "version": "v1.0.3",
+  "version": "1.0.4",
   "description": "Simple HTML element implementation for text rendering",
   "main": "main.cjs",
   "scripts": {
