--- a/.github/workflows/lint-fmt-test.yml
+++ b/.github/workflows/lint-fmt-test.yml
@@ -1,19 +1,20 @@
 name: lint, check format and test
 
-on: push
+on:
+  push:
+  workflow_dispatch:
 
 jobs:
   lint-fmt-test:
     runs-on: ubuntu-latest
-    timeout-minutes: 1
 
     steps:
       - uses: actions/checkout@v4
 
       - name: Setup Deno
-        uses: denoland/setup-deno@v1
+        uses: denoland/setup-deno@v2
         with:
-          deno-version: v1.x
+          deno-version: v2.x
 
       - name: Lint
         run: deno lint
@@ -22,4 +23,4 @@ jobs:
         run: deno fmt --check
 
       - name: Run tests
-        run: deno task test
+        run: deno test
