--- a/deno.json
+++ b/deno.json
@@ -1,4 +1,9 @@
 {
+  "name": "@tsukina-7mochi/simple-html-element",
+  "version": "1.1.0",
+  "license": "MIT",
+  "exports": "./src/mod.ts",
+
   "compilerOptions": {
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
