--- a/deno.json
+++ b/deno.json
@@ -11,6 +11,7 @@
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@^1.0.14",
-    "esbuild": "npm:esbuild"
+    "esbuild": "npm:esbuild",
+    "html-entities": "npm:html-entities@^2.6.0"
   }
 }
