--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Create a tag
         run: |
-          TAG_NAME="v$(cat deno.json | jq '.version')"
+          TAG_NAME="v$(cat deno.json | jq '.version' -r)"
           git tag "$TAG_NAME"
           git push origin "$TAG_NAME"
 
